[gd_scene load_steps=7 format=2]

[ext_resource path="res://levels/level_1.gd" type="Script" id=1]
[ext_resource path="res://magenta_square.png" type="Texture" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://dead_player_container.gd" type="Script" id=4]
[ext_resource path="res://platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://LevelEnd.tscn" type="PackedScene" id=6]

[node name="level_2" type="Node2D"]
script = ExtResource( 1 )

[node name="magenta_square" type="Sprite" parent="."]
position = Vector2( 612.732, 264.047 )
scale = Vector2( 55.7, 26.76 )
texture = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 74.5826, 433.607 )

[node name="dead_player_container" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="StaticBody2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 193.947, 500 )

[node name="StaticBody2D2" parent="." instance=ExtResource( 5 )]
position = Vector2( 1100, 500 )

[node name="LevelEnd" parent="." instance=ExtResource( 6 )]
position = Vector2( 1357.92, 405.029 )
